--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,48 @@
-# secret credentials
+# Environment variables
 .env
 
-# virtual environment
-venv/
-
-# python cache
+# Python
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# local database/logs
-*.db
-*.log
-data/
+# Virtual environment
+venv/
+env/
+ENV/
 
-# editor/os stuff
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Data files
+data/
+*.csv
+*.json
