chore: project cleanup and documentation improvements
- Remove unused/empty files in tracker/
- Clean up comments and docstrings for clarity
- Update .gitignore for proper tracking and data directory handling
- Add .gitkeep to preserve data directory
- Improve README with clear usage and structure
- Ensure only essential files are tracked by git

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,10 @@ Thumbs.db
 # Logs
 *.log
 
-# Data files
-data/
-*.csv
-*.json
+# Data files (keep directory but ignore contents)
+data/*
+!data/.gitkeep
+
+# Temporary files
+*.tmp
+*.temp
