feat: Integrate Mozart enhanced audio analyzer with complete pipeline
- Add Mozart enhanced audio analyzer with confidence scores
- Implement modular audio analysis architecture (src/audio/)
- Update database schema for enhanced features (valence_confidence, etc.)
- Add duplicate prevention for multi-instance deployments
- Update tracker to use Mozart enhanced analysis
- Add comprehensive test scripts and validation
- Clean up database schema (remove unused columns)
- Add .gitignore for temp_mozart reference directory

Features:
- Enhanced audio features: tempo, valence, danceability, instrumentalness, acousticness, speechiness
- Confidence scores for all enhanced features
- Key/mode detection, energy, loudness analysis
- Smart duplicate prevention across instances
- Background analysis with thread pooling
- Real-time Spotify tracking with Supabase integration

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ dmypy.json
 
 # Temporary audio files for analysis
 temp_audio/
+
+# Mozart reference directory (separate git repo)
+temp_mozart/
